minor styling changes

--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -1,6 +1,6 @@
 <ng-include src="infoPartial"></ng-include>
 
-<tabset class="tabs-dark col-xs-12 p-0 mb-10" justified="true">
+<tabset class="tabs-dark col-xs-12 p-0" justified="true">
   <tab heading="Equipped">
     <ng-include src="statPartial"></ng-include>
     <ng-include src="'views/fireteam/weapons.html'"></ng-include>
