--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -1,8 +1,8 @@
-<footer class="footer bg-darkgray" id="footer">
+<footer class="footer bg-darkgray pt-10" id="footer">
   <div class="container">
     <div class="row">
       <div class="hidden-xs col-md-2 text-left">
-        <h5 class="custom-font pt-20 text-sm"><strong>©2015 DestinyTrialsReport</strong></h5>
+        <h5 class="custom-font pt-20 text-sm"><strong>© 2015 DestinyTrialsReport</strong></h5>
         <h5 class="custom-font text-sm"><strong>DestinyTrialsReport@gmail.com</strong></h5>
       </div>
       <div class="col-xs-12 col-md-8 text-center" style="overflow:hidden">
