--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer bg-darkgray pt-10" id="footer">
+<footer class="footer bg-darkgray pt-10 pb-10" id="footer">
   <div class="container">
     <div class="row">
       <div class="hidden-xs col-md-2 text-left">
@@ -9,7 +9,7 @@
         <div ad-sense></div>
       </div>
       <div class="visible-xs-block col-xs-6 text-left">
-        <h5 class="custom-font pt-20 text-sm">©2015 DestinyTrialsReport</h5>
+        <h5 class="custom-font pt-20 text-sm">© 2015 DestinyTrialsReport</h5>
         <h5 class="custom-font text-sm">DestinyTrialsReport@gmail.com</h5>
       </div>
       <div class="col-xs-6 col-md-2 text-right">
