--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -1,13 +1,54 @@
-<div class="col-xs-12 col-md-6 col-md-offset-3 blog text-center">
-  <h3 class="custom-font filled bg-darkgray mb-0">
-    Burning Shrine Heatmap
+<div class="container clearfix">
+
+  <div class="row">
+
+
+    <!-- BLOG POSTS -->
+    <div class="col-sm-8 col-sm-offset-2 blog-posts">
+
+
+      <article class="post-entry">
+
+        <div class="entry-image">
+          <a href="#"><img src="https://bungie.net/img/theme/destiny/bgs/pgcrs/crucible_pantheon.jpg" class="img-responsive" alt="Image"></a>
+        </div>
+
+        <div class="entry-title">
+          <h2 class="text-uppercase">This weeks map: Pantheon</h2>
+        </div>
+
+        <ul class="entry-meta clearfix">
+          <li><i class="fa fa-calendar-o"></i> 7th Aug 2015</li>
+        </ul>
+
+        <div class="entry-content mt-10">
+          <p>First off, we want to thank everyone that has been using our site throughout your Trials passages these past few weeks.
+            We really do appreciate all of the feedback and suggestions we have been receiving.<br/>
+            Some of you may have notice that last week we got hit with some unexpected errors that briefly brought down the site.
+            This caught us by surprise but we tried our best to stay on top of it and have made many improvements this past week.</p>
+          <p>Load times should be decreased dramatically compared to last week, we have also added some more stats including the
+            <strong>Combat Rating</strong> stat that's provided by Bungie, and another table of leftover Trials stats that we weren't using before. </b>
+            We will be monitoring (and using) the application throughout the weekend to ensure stability.
+            <strong>If you come across any issue, error, blocker, or just want to send us a suggestion you can
+            <a href="mailto:destinytrialsreport@gmail.com" target="_top">email</a> us or open a ticket on
+            <a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">github</a>.</strong></p>
+        </div>
+
+      </article>
+
+    </div>
+  </div>
+</div>
+<!--<div class="col-xs-12 col-md-6 col-md-offset-3 blog text-center">-->
+  <!--<h3 class="custom-font filled bg-darkgray mb-0">-->
+    <!--Burning Shrine Heatmap-->
     <!--<span class="right text-small">-->
       <!--<timer end-time="1438362000000">-->
         <!--{{days}} day{{daysS}}, {{hours}} hour{{hoursS}}, {{minutes}} minute{{minutesS}}, {{seconds}} second{{secondsS}}-->
       <!--</timer> until Trials-->
     <!--</span>-->
-  </h3>
-  <img src="/images/ToO_BurningShrine_Heatmap.jpg" class="img-responsive" style="border-color:#e7e7e7; border:1px solid; margin:0 auto">
+  <!--</h3>-->
+  <!--<img src="/images/ToO_BurningShrine_Heatmap.jpg" class="img-responsive" style="border-color:#e7e7e7; border:1px solid; margin:0 auto">-->
   <!--<div class="row bg-default lter">-->
     <!--<div class="col-xs-6 col-md-6">-->
       <!--<h4 class="custom-font text-strong">Some useless data from last week</h4>-->
