--- a/app/views/fireteam/index.html
+++ b/app/views/fireteam/index.html
@@ -8,6 +8,7 @@
                 analytics-category="Refresh Inventory"
                 data-intro="Refreshes inventory for all players<br/><em>(weapons, armor, class)</em>"
                 data-position="right"
+                chardin-show="true"
                 data-class="hidden-xs hidden-sm">
           Refresh Inventory
         </button>
