--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -1,12 +1,12 @@
 <div class="card-container emblem" data-intro="Hovering over the playercard will reveal subclass perks"
-     data-position="top" ng-attr-data-opts="hidden-xs hidden-sm {{$middle ? '' : 'hidden'}}">
+     data-position="top" ng-attr-chardin-show="{{$middle}}">
   <div class="card mb-0"
        style="background-image:url('{{player.emblem}}'),url('{{player.background[0]}}'); background-repeat:no-repeat,no-repeat; background-position:left,right; background-size:66px 66px,100% 66px; height:66px">
     <div class="front p-0" data-intro="Trials <strong>k/d</strong> and <strong>win %</strong> for this <strong>character</strong><br/>Flawless based on account lifetime, <strong>not</strong> weekly stat"
-         data-position="right" ng-attr-data-opts="hidden-xs hidden-sm {{$middle ? '' : 'hidden'}}">
+         data-position="right" ng-attr-chardin-show="{{$middle}}">
       <p class="large mb-0">
         <span ng-bind="player.name"></span>
-        <span ng-show="player.stats.killsDeathsRatio" class="right pr-10">
+        <span ng-show="player.stats.killsDeathsRatio" class="right">
           <span class="hidden-xs hidden-md">K/D:</span>
           <span ng-bind="player.stats.killsDeathsRatio.basic.displayValue"></span>
         </span>
@@ -17,18 +17,21 @@
           <span ng-bind="player.level"></span>
           <span ng-bind="player.class.name"></span>
         </span>
-        <span ng-show="player.stats.activitiesEntered" class="right pr-10">
-          Win<span class="hidden-xs"> Avg</span>:
+        <span ng-show="player.stats.activitiesEntered" class="right">
+          Win<span class="hidden-xs"> Rate</span>:
           <span ng-bind="(100 * player.stats.activitiesWon.basic.value / player.stats.activitiesEntered.basic.value).toFixed()"></span>%
         </span>
       </p>
-      <div class="mb-0 mr-0 ml-0 row">
-        <div class="col-xs-6 col-xs-offset-6 text-right pr-0">
-          <span class="right text-white pr-10" ng-show="player.lighthouse === false && !player.neverTrials">Never Flawless</span>
-          <span class="right text-white pr-10" ng-show="player.lighthouse === true">Flawless</span>
-          <p class="text-center mb-0 pr-10" ng-show="player.neverTrials">No previous trials games</p>
-        </div>
-      </div>
+      <p class="mb-0">
+        <span ng-show="player.lighthouse === false && !player.neverTrials">Never Flawless</span>
+        <span ng-show="player.lighthouse === true">Flawless</span>
+        <span ng-show="player.neverTrials">No previous trials games</span>
+        <span ng-show="player.stats.combatRating" class="right">
+          <span class="visible-xs-inline">CR:</span>
+          <span class="hidden-xs">Rating:</span>
+          <span ng-bind="player.stats.combatRating.basic.displayValue"></span>
+        </span>
+      </p>
     </div>
     <div class="back">
       <div class="col-xs-12">
