misc UI refinements

--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -6,7 +6,7 @@
          data-position="right" ng-attr-data-opts="hidden-xs hidden-sm {{$middle ? '' : 'hidden'}}">
       <p class="large mb-0">
         <span ng-bind="player.name"></span>
-        <span ng-show="player.stats.killsDeathsRatio" class="right pr-10">
+        <span ng-show="player.stats.killsDeathsRatio" class="right">
           <span class="hidden-xs hidden-md">K/D:</span>
           <span ng-bind="player.stats.killsDeathsRatio.basic.displayValue"></span>
         </span>
@@ -17,18 +17,16 @@
           <span ng-bind="player.level"></span>
           <span ng-bind="player.class.name"></span>
         </span>
-        <span ng-show="player.stats.activitiesEntered" class="right pr-10">
+        <span ng-show="player.stats.activitiesEntered" class="right">
           Win<span class="hidden-xs"> Avg</span>:
           <span ng-bind="(100 * player.stats.activitiesWon.basic.value / player.stats.activitiesEntered.basic.value).toFixed()"></span>%
         </span>
       </p>
-      <div class="mb-0 mr-0 ml-0 row">
-        <div class="col-xs-6 col-xs-offset-6 text-right pr-0">
-          <span class="right text-white pr-10" ng-show="player.lighthouse === false && !player.neverTrials">Never Flawless</span>
-          <span class="right text-white pr-10" ng-show="player.lighthouse === true">Flawless</span>
-          <p class="text-center mb-0 pr-10" ng-show="player.neverTrials">No previous trials games</p>
-        </div>
-      </div>
+      <p class="mb-0">
+        <span class="right" ng-show="player.lighthouse === false && !player.neverTrials">Never Flawless</span>
+        <span class="right" ng-show="player.lighthouse === true">Flawless</span>
+        <span class="right" ng-show="player.neverTrials">No previous trials games</span>
+      </p>
     </div>
     <div class="back">
       <div class="col-xs-12">
