only show help button when player is in view

--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -19,7 +19,7 @@
             </div>
           </form>
         </div>
-        <div class="hidden-xs hidden-sm col-md-2 text-white text-right">
+        <div ng-show="fireteam" class="hidden-xs hidden-sm col-md-2 text-right">
           <button type="button" class="btn btn-default"
                   ng-click="toggleOverlay()">Help</button>
         </div>
