proxy /ps and /xbox to their #! equivalents, misc fixes

--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -25,7 +25,7 @@
       <p class="mb-0">
         <span ng-show="player.lighthouse === false && !player.neverTrials">Never Flawless</span>
         <span ng-show="player.lighthouse === true">Flawless</span>
-        <span ng-show="player.neverTrials">No previous trials games</span>
+        <span ng-show="player.neverTrials">No Trials Games</span>
         <span ng-show="player.stats.combatRating" class="right">
           <span class="visible-xs-inline">CR:</span>
           <span class="hidden-xs">Rating:</span>
