--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -3,18 +3,18 @@
     <div class="container">
       <div class="row mt-20 mb-20">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <form class="form-horizontal" role="form" ng-submit="searchPlayerbyName(mainPlayer, platformValue, 0, true)">
-            <div class="btn-group ng-scope pull-left"
-                 data-intro="Toggle between PS and Xbox platforms"
-                 data-position="left" chardin-show="true">
-              <label class="btn btn-default ng-untouched ng-valid ng-dirty" ng-model="platformValue" btn-radio="true">PS<span class="hidden-xs">N</span></label>
-              <label class="btn btn-default ng-untouched ng-valid ng-dirty" ng-model="platformValue" btn-radio="false">XB<span class="hidden-xs">OX</span></label>
-            </div>
-
+          <form ng-submit="searchPlayerbyName(mainPlayer, platformValue, 0, true)">
             <div class="input-group">
+              <span class="input-group-btn"
+                    data-intro="Toggle between PSN and XBOX platforms"
+                    data-position="left"
+                    chardin-show="true">
+                <label class="btn btn-default" ng-model="platformValue" btn-radio="true">PS<span class="hidden-xs">N</span></label>
+                <label class="btn btn-default" ng-model="platformValue" btn-radio="false">XB<span class="hidden-xs">OX</span></label>
+              </span>
               <input type="text" class="form-control" placeholder="Enter a Guardian's name" ng-model="mainPlayer">
               <span class="input-group-btn">
-                <button class="btn btn-default" type="submit" ng-disabled="status">Search</button>
+                <button type="submit" class="btn btn-default" ng-disabled="status">Search</button>
               </span>
             </div>
           </form>
