--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -2,7 +2,10 @@
   <div class="navbar navbar-default bg-darkgray lt b-0" role="navigation">
     <div class="container">
       <div class="row mt-20 mb-20">
-        <div class="col-xs-12 col-md-8 col-md-offset-2">
+        <div class="hidden-xs hidden-sm col-md-2">
+          <a href="/" target="_self" class="btn btn-default" style="color:#222">Home</a>
+        </div>
+        <div class="col-xs-12 col-md-8">
           <form ng-submit="searchPlayerbyName(mainPlayer, platformValue, 0, true)">
             <div class="input-group">
               <span class="input-group-btn"
@@ -20,8 +23,7 @@
           </form>
         </div>
         <div ng-show="fireteam" class="hidden-xs hidden-sm col-md-2 text-right">
-          <button type="button" class="btn btn-default"
-                  ng-click="toggleOverlay()">Help</button>
+          <button type="button" class="btn btn-default" ng-click="toggleOverlay()">Help</button>
         </div>
       </div>
     </div>
