--- a/app/styles/shared/_global.scss
+++ b/app/styles/shared/_global.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: $font-lato;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: $font-size-base;
   font-weight: $font-weight-normal;
   text-rendering: optimizeLegibility !important;
