--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,6 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 $fa-font-path: "../bower_components/font-awesome/fonts/";
-
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 // bower:scss
 @import "font-awesome/scss/font-awesome.scss";
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
@@ -273,4 +273,25 @@ tr.thin {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
+}
+
+.lato {
+  font-family: $font-lato;
+}
+
+.text-trialsgold {
+  color: #D3D023;
+}
+
+.logo {
+  margin-top: 3px !important;
+}
+
+@media screen and (max-width: 1280px) {
+  .logo  {
+    margin-left: 40px !important;
+  }
+  .logo-destiny {
+    display: none;
+  }
 }
