--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -7,7 +7,7 @@
             <!--<span class="hidden-sm">Destiny</span><span class="text-trialsgold">Trials</span>Report-->
           <!--</h3></a>-->
         <!--</div>-->
-        <div class="hidden-xs hidden-sm col-md-2 col-md-offset-1 p-0">
+        <div class="hidden-xs hidden-sm col-md-2 p-0" style="margin-left: 12.666667%;">
           <a href="/" target="_self" style="text-decoration: none;"><h3 class="text-light logo text-white lato m-0 p-0">
             <span class="hidden-sm logo-destiny">Destiny</span><span class="text-trialsgold">Trials</span>Report
           </h3></a>
@@ -15,7 +15,7 @@
         <!--<div class="hidden-xs hidden-sm col-md-2">-->
           <!--&lt;!&ndash;<a href="/" target="_self" class="btn btn-default" style="color:#222">Home</a>&ndash;&gt;-->
         <!--</div>-->
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12 col-md-5">
           <form ng-submit="searchPlayerbyName(mainPlayer, platformValue, 0, true)">
             <div class="input-group">
               <span class="input-group-btn"
