move GitHub to footer & misc changes

--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -18,18 +18,27 @@
         </div>
 
         <ul class="entry-meta clearfix">
-          <li><i class="fa fa-calendar-o"></i>7th Aug 2015</li>
+          <li>
+            <i class="fa fa-calendar-o"></i>
+            7th Aug 2015
+          </li>
         </ul>
 
         <div class="entry-content mt-10">
-          <p>First off, we want to thank everyone that has been using our site throughout your Trials passages these past few weeks.
-            We really do appreciate all of the feedback and suggestions we have been receiving.<br/>
+          <p>
+            First off, we want to thank everyone that has been using our site throughout your Trials passages these past few weeks.
+            We really do appreciate all of the feedback and suggestions we have been receiving.
+          </p>
+          <p>
             Some of you may have noticed that last week we got hit with some unexpected errors that briefly brought down the site.
             This caught us by surprise, but we tried our best to stay on top of it and have made many improvements this past week.
           </p>
-          <p>Load times have been decreased dramatically compared to last week, and we have also added some more stats including the
+          <p>
+            Load times have been decreased dramatically compared to last week, and we have also added some more stats including the
             <strong>Combat Rating</strong> stat that's provided by Bungie, and another table of leftover Trials stats that we weren't using before.
             We will be monitoring (and using) the application throughout the weekend to ensure stability.
+          </p>
+          <p>
             <strong>If you come across any issue, error, or just want to send us a suggestion you can
             <a href="mailto:destinytrialsreport@gmail.com" target="_top">email</a> us or open a ticket on
             <a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">GitHub</a>.</strong>
