--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -1,16 +1,18 @@
 <footer class="footer bg-darkgray pt-10 pb-10" id="footer">
   <div class="container">
     <div class="row">
-      <div class="hidden-xs col-md-2 text-left">
-        <h5 class="custom-font pt-20 text-sm"><strong>© 2015 DestinyTrialsReport</strong></h5>
+      <div class="hidden-xs col-md-2 text-left pt-10">
+        <h5 class="custom-font text-sm"><strong>© 2015 DestinyTrialsReport</strong></h5>
         <h5 class="custom-font text-sm"><strong>DestinyTrialsReport@gmail.com</strong></h5>
+        <h5 class="custom-font text-sm"><strong><a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">Fork me on GitHub</a></strong></h5>
       </div>
       <div class="col-xs-12 col-md-8 text-center" style="overflow:hidden">
         <div ad-sense></div>
       </div>
-      <div class="visible-xs-block col-xs-6 text-left">
-        <h5 class="custom-font pt-20 text-sm">© 2015 DestinyTrialsReport</h5>
+      <div class="visible-xs-block col-xs-6 text-left pt-10">
+        <h5 class="custom-font text-sm">© 2015 DestinyTrialsReport</h5>
         <h5 class="custom-font text-sm">DestinyTrialsReport@gmail.com</h5>
+        <h5 class="custom-font text-sm"><a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">Fork me on GitHub</a></h5>
       </div>
       <div class="col-xs-6 col-md-2 text-right">
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="pt-20">
