--- a/app/views/fireteam/maps.html
+++ b/app/views/fireteam/maps.html
@@ -1,46 +1,138 @@
-<!--<div class="row pt-0" style="margin-top:-3px">-->
-  <!--<div class="col-xs-12">-->
-    <!--<table class="table table-striped">-->
-      <!--<thead>-->
-        <!--<tr>-->
-          <!--<th class="p-0">-->
-            <!--<h5 class="mt-0 mb-0 custom-font filled bg-danger">Map</h5>-->
-          <!--</th>-->
-          <!--<th class="p-0">-->
-            <!--<h5 class="mt-0 mb-0 custom-font filled bg-danger">K</h5>-->
-          <!--</th>-->
-          <!--<th class="p-0">-->
-            <!--<h5 class="mt-0 mb-0 custom-font filled bg-danger">D</h5>-->
-          <!--</th>-->
-          <!--<th class="p-0">-->
-            <!--<h5 class="mt-0 mb-0 custom-font filled bg-danger">A</h5>-->
-          <!--</th>-->
-          <!--<th class="p-0">-->
-            <!--<h5 class="mt-0 mb-0 custom-font filled bg-danger">W</h5>-->
-          <!--</th>-->
-          <!--<th class="p-0">-->
-            <!--<h5 class="mt-0 mb-0 custom-font filled bg-danger">L</h5>-->
-          <!--</th>-->
-        <!--</tr>-->
-      <!--</thead>-->
-      <!--<tbody>-->
-        <!--<tr ng-repeat="(key, value) in player.mapStats track by $index">-->
-          <!--<td class="p-10" ng-bind="DestinyTrialsDefinitions[key].activityName"></td>-->
-          <!--<td class="p-10" ng-bind="value.kills"></td>-->
-          <!--<td class="p-10" ng-bind="value.deaths"></td>-->
-          <!--<td class="p-10" ng-bind="value.assists"></td>-->
-          <!--<td class="p-10" ng-bind="value.wins"></td>-->
-          <!--<td class="p-10" ng-bind="value.losses"></td>-->
-        <!--</tr>-->
-        <!--<tr>-->
-          <!--<td class="p-10" style="font-weight:bold">Total</td>-->
-          <!--<td class="p-10" style="font-weight:bold" ng-bind="player.totals.kills"></td>-->
-          <!--<td class="p-10" style="font-weight:bold" ng-bind="player.totals.deaths"></td>-->
-          <!--<td class="p-10" style="font-weight:bold" ng-bind="player.totals.assists"></td>-->
-          <!--<td class="p-10" style="font-weight:bold" ng-bind="player.totals.wins"></td>-->
-          <!--<td class="p-10" style="font-weight:bold" ng-bind="player.totals.losses"></td>-->
-        <!--</tr>-->
-      <!--</tbody>-->
-    <!--</table>-->
-  <!--</div>-->
-<!--</div>-->
+<div class="row" style="margin-top: -3px;">
+  <div class="col-xs-3 pr-0">
+    <div class="col-xs-12 p-0 text-center">
+      <h5 class="mt-0 custom-font filled bg-danger">AVG Kill Distance</h5>
+    </div>
+    <div class="col-xs-12 p-0 text-center">
+      <h4 class="mt-0" ng-bind="player.stats.averageKillDistance.basic.displayValue"></h4>
+    </div>
+  </div>
+  <div class="col-xs-3 p-0">
+    <div class="col-xs-12 p-0 text-center">
+      <h5 class="mt-0 custom-font filled bg-danger">AVG Lifespan</h5>
+    </div>
+    <div class="col-xs-12 p-0 text-center">
+      <h4 class="mt-0" ng-bind="player.stats.averageLifespan.basic.displayValue"></h4>
+    </div>
+  </div>
+  <div class="col-xs-3 p-0">
+    <div class="col-xs-12 p-0 text-center">
+      <h5 class="mt-0 custom-font filled bg-danger">Games Played</h5>
+    </div>
+    <div class="col-xs-12 p-0 text-center">
+      <h4 class="mt-0" ng-bind="player.stats.activitiesEntered.basic.displayValue"></h4>
+    </div>
+  </div>
+  <div class="col-xs-3 pl-0">
+    <div class="col-xs-12 p-0 text-center">
+      <h5 class="mt-0 custom-font filled bg-danger">Games Won</h5>
+    </div>
+    <div class="col-xs-12 p-0 text-center">
+      <h4 class="mt-0" ng-bind="player.stats.activitiesWon.basic.displayValue"></h4>
+    </div>
+  </div>
+</div>
+<div class="row" style="margin-top: -3px;">
+  <div class="col-xs-4 pr-0">
+    <div class="col-xs-12 p-0 text-center">
+      <h5 class="mt-0 custom-font filled bg-danger">Longest Single Life</h5>
+    </div>
+    <div class="col-xs-12 p-0 text-center">
+      <h4 class="mt-0" ng-bind="player.stats.longestSingleLife.basic.displayValue"></h4>
+    </div>
+  </div>
+  <div class="col-xs-4 p-0">
+    <div class="col-xs-12 p-0 text-center">
+      <h5 class="mt-0 custom-font filled bg-danger">Best Weapon Type</h5>
+    </div>
+    <div class="col-xs-12 p-0 text-center">
+      <h4 class="mt-0 text-medium" ng-bind="player.stats.weaponBestType.basic.displayValue"></h4>
+    </div>
+  </div>
+  <div class="col-xs-4 pl-0">
+    <div class="col-xs-12 p-0 text-center">
+      <h5 class="mt-0 custom-font filled bg-danger">Most Single Game Kills</h5>
+    </div>
+    <div class="col-xs-12 p-0 text-center">
+      <h4 class="mt-0" ng-bind="player.stats.bestSingleGameKills.basic.displayValue"></h4>
+    </div>
+  </div>
+</div>
+<div class="row pt-0" style="margin-top:-3px">
+  <div class="col-xs-12">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th class="p-0">
+            <h5 class="mt-0 mb-0 custom-font filled bg-danger">Weapon</h5>
+          </th>
+          <th class="p-0">
+            <h5 class="mt-0 mb-0 custom-font filled bg-danger text-center">PGA</h5>
+          </th>
+          <th class="p-0">
+            <h5 class="mt-0 mb-0 custom-font filled bg-danger">Misc</h5>
+          </th>
+          <th class="p-0">
+            <h5 class="mt-0 mb-0 custom-font filled bg-danger text-center">PGA</h5>
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="p-5">Grenade Kills</td>
+          <td class="p-5 text-center" ng-bind="player.stats.weaponKillsGrenade.pga.displayValue"></td>
+          <td class="p-5">Kills (All)</td>
+          <td class="p-5 text-center" ng-bind="player.stats.kills.pga.displayValue"></td>
+        </tr>
+        <tr>
+          <td class="p-5">Super Kills</td>
+          <td class="p-5 text-center" ng-bind="player.stats.weaponKillsSuper.pga.displayValue"></td>
+          <td class="p-5">Deaths</td>
+          <td class="p-5 text-center" ng-bind="player.stats.deaths.pga.displayValue"></td>
+        </tr>
+        <tr>
+          <td class="p-5">Shotgun Kills</td>
+          <td class="p-5 text-center" ng-bind="player.stats.weaponKillsShotgun.pga.displayValue"></td>
+          <td class="p-5">Precision Kills</td>
+          <td class="p-5 text-center" ng-bind="player.stats.precisionKills.pga.displayValue"></td>
+        </tr>
+        <tr>
+          <td class="p-5">Sniper Kills</td>
+          <td class="p-5 text-center" ng-bind="player.stats.weaponKillsSniper.pga.displayValue"></td>
+          <td class="p-5">Res Performed</td>
+          <td class="p-5 text-center" ng-bind="player.stats.resurrectionsPerformed.pga.displayValue"></td>
+        </tr>
+        <tr>
+          <td class="p-5">Melee Kills</td>
+          <td class="p-5 text-center" ng-bind="player.stats.weaponKillsMelee.pga.displayValue"></td>
+          <td class="p-5">Res Received</td>
+          <td class="p-5 text-center" ng-bind="player.stats.resurrectionsReceived.pga.displayValue"></td>
+        </tr>
+        <tr>
+          <td class="p-5">Scout Rifle Kills</td>
+          <td class="p-5 text-center" ng-bind="player.stats.weaponKillsScoutRifle.pga.displayValue"></td>
+          <td class="p-5">Assists</td>
+          <td class="p-5 text-center" ng-bind="player.stats.assists.pga.displayValue"></td>
+        </tr>
+        <tr>
+          <td class="p-5">Pulse Rifle Kills</td>
+          <td class="p-5 text-center" ng-bind="player.stats.weaponKillsPulseRifle.pga.displayValue"></td>
+          <td class="p-5">Ability Kills</td>
+          <td class="p-5 text-center" ng-bind="player.stats.abilityKills.pga.displayValue"></td>
+        </tr>
+        <tr>
+          <td class="p-5">Hand Cannon Kills</td>
+          <td class="p-5 text-center" ng-bind="player.stats.weaponKillsHandCannon.pga.displayValue"></td>
+          <td class="p-5">Activity Duration</td>
+          <td class="p-5 text-center" ng-bind="player.stats.totalActivityDurationSeconds.pga.displayValue"></td>
+        </tr>
+        <tr>
+          <td class="p-5">Launcher Kills</td>
+          <td class="p-5 text-center" ng-bind="player.stats.weaponKillsRocketLauncher.pga.displayValue"></td>
+          <td class="p-5">Score</td>
+          <td class="p-5 text-center" ng-bind="player.stats.score.pga.displayValue"></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
