--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -9,9 +9,9 @@
   <tab heading="Last Match" analytics-on analytics-event="Click" analytics-category="Last Match">
     <ng-include src="'views/fireteam/history.html'"></ng-include>
   </tab>
-  <!--<tab heading="Maps" analytics-on analytics-event="Click" analytics-category="Maps">-->
-    <!--<ng-include src="'views/fireteam/maps.html'"></ng-include>-->
-  <!--</tab>-->
+  <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats">
+    <ng-include src="'views/fireteam/maps.html'"></ng-include>
+  </tab>
 </tabset>
 
 <div class="row">
