--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -1,25 +1,29 @@
 <footer class="footer bg-darkgray pt-10 pb-10" id="footer">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div class="hidden-xs col-md-2 text-left pt-10">
-        <h5 class="custom-font text-sm"><strong>© 2015 DestinyTrialsReport</strong></h5>
-        <h5 class="custom-font text-sm"><strong>DestinyTrialsReport@gmail.com</strong></h5>
-        <h5 class="custom-font text-sm"><strong><a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">Fork me on GitHub</a></strong></h5>
+      <div class="hidden-xs col-md-3 text-left" style="display:flex; align-items:center">
+        <div>
+          <h5 class="custom-font text-sm"><strong>© 2015 DestinyTrialsReport</strong></h5>
+          <h5 class="custom-font text-sm"><strong>DestinyTrialsReport@gmail.com</strong></h5>
+          <h5 class="custom-font text-sm"><strong><a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">Fork me on GitHub</a></strong></h5>
+        </div>
       </div>
-      <div class="col-xs-12 col-md-8 text-center" style="overflow:hidden">
+      <div class="col-xs-12 col-md-6 text-center">
         <div ad-sense></div>
       </div>
-      <div class="visible-xs-block col-xs-6 text-left pt-10">
-        <h5 class="custom-font text-sm">© 2015 DestinyTrialsReport</h5>
-        <h5 class="custom-font text-sm">DestinyTrialsReport@gmail.com</h5>
-        <h5 class="custom-font text-sm"><a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">Fork me on GitHub</a></h5>
+      <div class="visible-xs-block col-xs-6 text-left" style="display:flex; align-items:center">
+        <div>
+          <h5 class="custom-font text-sm">© 2015 DestinyTrialsReport</h5>
+          <h5 class="custom-font text-sm">DestinyTrialsReport@gmail.com</h5>
+          <h5 class="custom-font text-sm"><a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">Fork me on GitHub</a></h5>
+        </div>
       </div>
-      <div class="col-xs-6 col-md-2 text-right">
-        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="pt-20">
-        <input type="hidden" name="cmd" value="_s-xclick">
-        <input type="hidden" name="hosted_button_id" value="A3T6F2QDXUTCN">
-        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+      <div class="col-xs-6 col-md-3 text-right">
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="mt-20">
+          <input type="hidden" name="cmd" value="_s-xclick">
+          <input type="hidden" name="hosted_button_id" value="A3T6F2QDXUTCN">
+          <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+          <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
         </form>
       </div>
     </div>
