--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -8,7 +8,7 @@
           <!--</h3></a>-->
         <!--</div>-->
         <div class="hidden-xs hidden-sm col-md-2 p-0" style="margin-left: 12.666667%;">
-          <a href="/" target="_self" style="text-decoration: none;"><h3 class="text-light logo text-white lato m-0 p-0">
+          <a href="/" target="_self" style="text-decoration:none"><h3 class="text-light logo text-white lato m-0 p-0">
             <span class="hidden-sm logo-destiny">Destiny</span><span class="text-trialsgold">Trials</span>Report
           </h3></a>
         </div>
@@ -19,11 +19,11 @@
           <form ng-submit="searchPlayerbyName(mainPlayer, platformValue, 0, true)">
             <div class="input-group">
               <span class="input-group-btn"
-                    data-intro="Toggle between PSN and XBOX platforms"
+                    data-intro="Toggle between PSN and XBL platforms"
                     data-position="left"
                     chardin-show="true">
                 <label class="btn btn-default" ng-model="platformValue" btn-radio="true">PS<span class="hidden-xs">N</span></label>
-                <label class="btn btn-default" ng-model="platformValue" btn-radio="false">XB<span class="hidden-xs">OX</span></label>
+                <label class="btn btn-default" ng-model="platformValue" btn-radio="false">XB<span class="hidden-xs">L</span></label>
               </span>
               <input type="text" class="form-control" placeholder="Enter a Guardian's name" ng-model="mainPlayer">
               <span class="input-group-btn">
