small mobile fixes

--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -75,11 +75,11 @@
         <span ng-bind="weapon.values.uniqueWeaponKills.basic.value"></span>
       </p>
       <p class="text-left text-sm m-0">
-        <strong>Headshots:</strong>
+        <strong>HS:</strong>
         <span ng-bind="weapon.values.uniqueWeaponPrecisionKills.basic.value"></span>
       </p>
       <p class="text-left text-sm m-0 mb-10">
-        <strong>HS Acc:</strong>
+        <strong>Acc:</strong>
         <span ng-bind="weapon.values.uniqueWeaponKillsPrecisionKills.basic.displayValue"></span>
       </p>
     </div>
