--- a/app/views/fireteam/maps.html
+++ b/app/views/fireteam/maps.html
@@ -1,7 +1,7 @@
 <div class="row" style="margin-top: -3px;">
   <div class="col-xs-3 pr-0">
     <div class="col-xs-12 p-0 text-center">
-      <h5 class="mt-0 custom-font filled bg-danger">AVG Kill Distance</h5>
+      <h5 class="mt-0 custom-font filled bg-danger">Kill Distance</h5>
     </div>
     <div class="col-xs-12 p-0 text-center">
       <h4 class="mt-0" ng-bind="player.stats.averageKillDistance.basic.displayValue"></h4>
@@ -51,7 +51,7 @@
   </div>
   <div class="col-xs-4 pl-0">
     <div class="col-xs-12 p-0 text-center">
-      <h5 class="mt-0 custom-font filled bg-danger">Most Single Game Kills</h5>
+      <h5 class="mt-0 custom-font filled bg-danger pr-0 pl-0">Most Single Game Kills</h5>
     </div>
     <div class="col-xs-12 p-0 text-center">
       <h4 class="mt-0" ng-bind="player.stats.bestSingleGameKills.basic.displayValue"></h4>
