--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="col-xs-6 col-md-3 text-right">
-        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="mt-20">
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="mt-20" style="overflow:hidden">
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="A3T6F2QDXUTCN">
           <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
