--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer bg-darkgray pt-10 pb-10" id="footer">
   <div class="container-fluid">
     <div class="row">
-      <div class="hidden-xs col-md-3" style="display:flex; align-content:center">
+      <div class="hidden-xs col-md-2 col-md-offset-1" style="display:flex; align-content:center">
         <div>
           <h5 class="custom-font text-sm"><strong>© 2015 DestinyTrialsReport</strong></h5>
           <h5 class="custom-font text-sm"><strong>DestinyTrialsReport@gmail.com</strong></h5>
@@ -18,7 +18,7 @@
           <h5 class="custom-font text-sm"><a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">Fork me on GitHub</a></h5>
         </div>
       </div>
-      <div class="col-xs-6 col-md-3 text-right">
+      <div class="col-xs-6 col-md-2 text-right">
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="mt-20" style="overflow:hidden">
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="A3T6F2QDXUTCN">
