add heatmap modal & minor adjustments

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -271,6 +271,7 @@ tr.thin {
   margin-top: 3px !important;
 }
 
+/*
 @media screen and (max-width: 1280px) {
   .logo  {
     margin-left: 40px !important;
@@ -279,3 +280,4 @@ tr.thin {
     display: none;
   }
 }
+*/
