--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer bg-darkgray pt-10 pb-10" id="footer">
   <div class="container-fluid">
     <div class="row">
-      <div class="hidden-xs col-md-2 col-md-offset-1" style="display:flex; align-content:center">
+      <div class="hidden-xs hidden-sm col-md-2 col-md-offset-1" style="display:flex; align-content:center">
         <div>
           <h5 class="custom-font text-sm"><strong>© 2015 DestinyTrialsReport</strong></h5>
           <h5 class="custom-font text-sm"><strong>DestinyTrialsReport@gmail.com</strong></h5>
@@ -11,7 +11,7 @@
       <div class="col-xs-12 col-md-6 text-center">
         <div ad-sense></div>
       </div>
-      <div class="visible-xs-block col-xs-6" style="display:flex; align-content:center">
+      <div class="col-xs-6 hidden-md hidden-lg" style="display:flex; align-content:center">
         <div>
           <h5 class="custom-font text-sm">© 2015 DestinyTrialsReport</h5>
           <h5 class="custom-font text-sm">DestinyTrialsReport@gmail.com</h5>
