here ya go you crybaby

--- a/app/views/profile/blog.html
+++ b/app/views/profile/blog.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="entry-title">
-          <h2 >Introducing: myDestinyTrialsReport</h2>
+          <h2>myDestinyTrialsReport</h2>
         </div>
 
         <ul class="entry-meta clearfix">
@@ -26,18 +26,10 @@
 
         <div class="entry-content mt-10">
           <p>
-            Since we have seen a lot of interest in sharing your own stats through our app we have made it a little bit easier for you.
+            Currently in beta so let us know what you would like to see added.
           </p>
           <p>
-            <strong>my.DestinyTrialsReport.com</strong> works just like our fireteam search but instead of partnering you up with your
-            recent trials teammates we group you with your other characters.
-          </p>
-          <p>
-            Navigate to <strong><a href="http://my.DestinyTrialsReport.com" target="_top">http://my.DestinyTrialsReport.com/</a> </strong>
-            and use the search or simply add your platform and name to the url:
-            <strong><a href="http://my.DestinyTrialsReport.com/ps/Gothalion" target="_top">http://my.DestinyTrialsReport.com/ps/Gothalion</a></strong>
-            or
-            <strong><a href="http://my.DestinyTrialsReport.com/xbox/Deej BNG" target="_top">http://my.DestinyTrialsReport.com/xbox/Deej BNG</a></strong>
+            Just search your account name and see your stats across all your characters.
           </p>
           <p>
             <strong>If you come across any issue, error, or just want to send us a suggestion you can
