--- a/app/views/main.html
+++ b/app/views/main.html
@@ -27,5 +27,5 @@
       <ng-include src="'views/blog/index.html'" ng-show="!fireteam[0]"></ng-include>
     </div>
   </div>
-  <ng-include src="'views/shared/footer.html'"></ng-include>
+  <ng-include src="footerPartial"></ng-include>
 </div>
