--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -11,5 +11,5 @@
       <ng-include src="'views/profile/index.html'" ng-show="fireteam[0]"></ng-include>
     </div>
   </div>
-  <ng-include src="'views/shared/footer.html'"></ng-include>
+  <ng-include src="footerPartial"></ng-include>
 </div>
