--- a/app/views/fireteam/addStats.html
+++ b/app/views/fireteam/addStats.html
@@ -1,4 +1,4 @@
-<div class="row" style="margin-top: -3px;">
+<div class="row" style="margin-top:-3px">
   <div class="col-xs-3 pr-0">
     <div class="col-xs-12 p-0 text-center">
       <h5 class="mt-0 custom-font filled bg-danger">Kill Distance</h5>
@@ -32,7 +32,7 @@
     </div>
   </div>
 </div>
-<div class="row" style="margin-top: -3px;">
+<div class="row" style="margin-top:-3px">
   <div class="col-xs-4 pr-0">
     <div class="col-xs-12 p-0 text-center">
       <h5 class="mt-0 custom-font filled bg-danger">Longest Single Life</h5>
