--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -1,4 +1,4 @@
-<div class="row" style="margin-top: -3px;">
+<div class="row" style="margin-top:-3px">
   <div class="col-xs-3 pr-0">
     <div class="col-xs-12 p-0 text-center">
       <h5 class="mt-0 custom-font filled bg-danger">Kills</h5>
@@ -61,7 +61,9 @@
 </div>
 
 <div class="row">
-  <div class="col-xs-6 {{$even ? '' : 'pl-0'}}" ng-repeat="weapon in player.playerWeapons track by $index">
+  <div class="col-xs-6"
+       ng-class="{'pl-0':$odd}"
+       ng-repeat="weapon in player.playerWeapons track by $index">
     <div class="col-xs-6 text-center p-0">
       <a class="icon icon-default"
          popover="{{getWeaponByHash(weapon.referenceId).name}}"
@@ -84,7 +86,7 @@
       </p>
     </div>
   </div>
-  <!--<div class="col-xs-6 {{$even ? '' : 'pl-0'}}" ng-repeat="wKill in player.wKills" ng-show="DestinyMedalDefinition[wKill.id]">-->
+  <!--<div class="col-xs-6" ng-class="{'pl-0':$odd}" ng-repeat="wKill in player.wKills" ng-show="DestinyMedalDefinition[wKill.id]">-->
     <!--<div class="col-xs-6 text-center p-0">-->
       <!--<a class="icon icon-default"-->
          <!--popover="{{DestinyMedalDefinition[wKill.id].statName}}"-->
