--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -1,7 +1,7 @@
 <ng-include src="infoPartial"></ng-include>
 
 <tabset class="tabs-dark col-xs-12 p-0" justified="true">
-  <tab heading="Equipped">
+  <tab heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped">
     <ng-include src="statPartial"></ng-include>
     <ng-include src="'views/fireteam/weapons.html'"></ng-include>
     <ng-include src="'views/fireteam/armor.html'"></ng-include>
@@ -16,14 +16,13 @@
 
 <div class="row">
   <div class="col-xs-12 hidden-xs hidden-sm">
-    <a class="btn btn-block btn-trials btn-default bg-info dker"
-       href="http://destinytracker.com/destiny/trials/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}"
-       target="_blank"
-       type="button"
-       style="border: none;"
+    <a href="http://destinytracker.com/destiny/trials/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}"
+       type="button" target="_blank"
+       class="btn btn-block btn-trials btn-default bg-info dker" style="border:none"
        analytics-on analytics-event="Click" analytics-category="DestinyTracker"
        data-intro="Links to <strong>DestinyTracker</strong> for more detailed statistics based on all characters and maps"
-       data-position="right" ng-attr-chardin-show="{{$middle}}">
+       data-position="right"
+       chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
        View DestinyTracker Stats
      </a>
   </div>
