--- a/app/views/profile/index.html
+++ b/app/views/profile/index.html
@@ -1,16 +1,18 @@
-<div class="col-xs-12 player-wrapper col-md-4 {{singleResult ? 'col-md-offset-4' : ''}}" ng-if="fireteam[0].name && $index < 3" ng-repeat="player in fireteam track by $index">
+<div ng-repeat="player in fireteam track by $index"
+     ng-if="fireteam[0].name && $index < 3"
+     ng-class="{'col-md-offset-2': $first && fireteam.length==2, 'col-md-offset-4': $first && fireteam.length==1}"
+     class="col-xs-12 col-md-4 player-wrapper">
   <div class="row" style="height:18px">
     <div class="col-xs-12">
-          <span class="label bg-danger"
-                style="margin-right:2px"
+          <span class="label bg-danger" style="margin-right:2px"
                 ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index"
                 ng-bind="hazard"
-                popover="{{DestinyHazardDefinition[hazard]}}"
-                popover-trigger="mouseenter">
+                popover="{{DestinyHazardDefinition[hazard]}}" popover-trigger="mouseenter">
           </span>
     </div>
   </div>
-  <section class="tile tile-simple player " ng-class="helpOverlay && ($middle || singleResult) ? 'z99999999' : 'z000000'">
+  <section class="tile tile-simple player"
+           ng-class="helpOverlay && isHelpOverlayElement(fireteam.length, $index) ? 'z99999999' : 'z000000'">
     <div class="tile-body p-0">
       <ng-include src="'views/profile/player.html'"></ng-include>
     </div>
