a little special something

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -267,6 +267,11 @@ tr.thin {
   color: #D3D023;
 }
 
+.bg-trialsgold {
+  background-color: #D3D023;
+  color:  $darker-slategray;
+}
+
 .logo {
   margin-top: 3px !important;
 }
