--- a/app/views/fireteam/index.html
+++ b/app/views/fireteam/index.html
@@ -1,8 +1,8 @@
 <div class="col-xs-12 player-wrapper col-md-4" ng-if="fireteam[0].name && $index < 3" ng-repeat="player in fireteam track by $index">
   <div class="row ml-0 mr-0" ng-show="$index === 0">
-    <div class="btn-group btn-group-justified">
+    <div class="btn-group btn-group-justified shadow-z-1">
       <div class="btn-group">
-        <button class="btn btn-trials btn-success" type="button" ng-class="helpOverlay ? 'z99999999' : 'z000000'"
+        <button class="btn btn-trials btn-material-blue-grey" type="button" ng-class="helpOverlay ? 'z99999999' : 'z000000'"
                 ng-click="refreshInventory()"
                 analytics-on analytics-event="Click"
                 analytics-category="Refresh Inventory"
@@ -14,11 +14,11 @@
         </button>
       </div>
       <div class="btn-group" ng-show="player.otherCharacters.length > 1">
-        <button class="btn btn-default dropdown-toggle" type="button" id="characterSelect" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        <button class="btn btn-white dropdown-toggle" type="button" id="characterSelect" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
           <span ng-bind="player.className"></span>
           <span class="caret"></span>
         </button>
-        <ul class="dropdown-menu" style="width:100%" aria-labelledby="characterSelect">
+        <ul class="dropdown-menu btn-white" style="width:100%" aria-labelledby="characterSelect">
           <li ng-repeat="character in player.otherCharacters" ng-if="player.characterId !== character.characterId">
             <a ng-bind="character.className" ng-click="setRecentPlayer(character, 0, true)"
                analytics-on analytics-event="Click" analytics-category="Character Change">
@@ -31,9 +31,9 @@
   <div class="row" ng-hide="$index === 0">
     <div class="col-xs-12">
       <form class="form-horizontal" role="form" ng-submit="searchPlayerbyName(teammateName, platformValue, $index, false)">
-        <div class="input-group" ng-class="helpOverlay && ($index === 2) ? 'z99999999' : ''">
+        <div class="input-group mt-10 mb-10 shadow-z-1" ng-class="helpOverlay && ($index === 2) ? 'z99999999' : ''">
               <span ng-hide="recentPlayers" class="input-group-btn">
-                <button class="btn btn-trials btn-default" type="button"
+                <button class="btn btn-trials btn-white" type="button"
                         ng-click="suggestRecentPlayers()"
                         analytics-on analytics-event="Click"
                         analytics-category="Suggest Recent Players">
@@ -41,7 +41,7 @@
                 </button>
               </span>
           <div ng-show="recentPlayers" class="input-group-btn">
-            <button class="btn btn-trials dropdown-toggle btn-default" style="margin-right:-2px" type="button"
+            <button class="btn btn-trials dropdown-toggle btn-white" style="margin-right:-2px" type="button"
                     id="dropdownMenuMobile{{($index)}}" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="true">
               Recent Players
@@ -55,10 +55,11 @@
               </li>
             </ul>
           </div>
-          <input type="text" class="form-control" placeholder="Search for..." ng-model="teammateName"
-                 ng-class="helpOverlay && ($index === 2) ? 'z99999999' : 'z000000'">
+          <input type="text" class="form-control pl-10" placeholder="Search for..." ng-model="teammateName"
+                 ng-class="helpOverlay && ($index === 2) ? 'z99999999' : 'z000000'"
+                 style="height: 34px;">
               <span class="input-group-btn">
-                <button class="btn btn-default" type="submit"
+                <button class="btn btn-material-blue-grey" type="submit"
                         ng-class="helpOverlay && ($index === 2) ? 'z99999999' : 'z000000'">Search</button>
               </span>
         </div>
@@ -68,14 +69,14 @@
 
   <div class="row" style="height:18px">
     <div class="col-xs-12">
-          <span class="label bg-trialsgold"
+          <span class="label bg-trialsgold shadow-z-3"
                 style="margin-right:-2px"
                 ng-repeat="hazard in player.nonHazard track by $index"
                 ng-bind="hazard"
                 popover="{{DestinyHazardDefinition[hazard]}}"
                 popover-trigger="mouseenter">
           </span>
-          <span class="label bg-danger"
+          <span class="label bg-danger shadow-z-3"
                 style="margin-right:2px"
                 ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index"
                 ng-bind="hazard"
@@ -84,7 +85,7 @@
           </span>
     </div>
   </div>
-  <section class="tile tile-simple player " ng-class="helpOverlay && ($middle) ? 'z99999999' : 'z000000'">
+  <section class="tile tile-simple player shadow-z-2" ng-class="helpOverlay && ($middle) ? 'z99999999' : 'z000000'">
     <div class="tile-body p-0">
       <ng-include src="'views/fireteam/player.html'"></ng-include>
     </div>
