--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -3,7 +3,9 @@
      data-position="top"
      chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
   <div class="card mb-0"
-       style="background-image:url('{{player.emblem}}'),url('{{player.background[0]}}'); background-repeat:no-repeat,no-repeat; background-position:left,right; background-size:66px 66px,100% 66px; height:66px">
+       style="background-image:url('{{player.emblem}}'),url('{{player.background[0]}}');
+       background-repeat:no-repeat,no-repeat; background-position:left,right;
+       background-size:66px 66px,100% 66px; height:66px; box-shadow: none;">
     <div class="front p-0"
          data-intro="Trials <strong>k/d</strong> and <strong>win %</strong> for this <strong>character</strong><br/>Flawless based on account lifetime, <strong>not</strong> weekly stat"
          data-position="right"
