--- a/app/views/fireteam/stats.html
+++ b/app/views/fireteam/stats.html
@@ -4,17 +4,17 @@
        data-position="left"
        chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
     <progress max="player.cTotal" animate="true" class="progress not-rounded m-0">
-      <bar value="player.cInt" popover="Intellect: {{player.int}} ({{player.intPercent}}%)" popover-trigger="mouseenter" type="greensea">
+      <bar value="player.cInt" popover="Intellect: {{player.int}} ({{player.intPercent}}%)" popover-trigger="mouseenter" class="progress-bar-success">
         <span ng-show="player.cIntPercent >= 27">Intellect {{player.intPercent}}%</span>
         <span ng-show="player.cIntPercent <  27 && player.cIntPercent >= 16">Int {{player.intPercent}}%</span>
         <span ng-show="player.cIntPercent <  16">Int</span>
       </bar>
-      <bar value="player.cDis" popover="Discipline: {{player.dis}} ({{player.disPercent}}%)" popover-trigger="mouseenter">
+      <bar value="player.cDis" popover="Discipline: {{player.dis}} ({{player.disPercent}}%)" popover-trigger="mouseenter" class="progress-bar-material-teal">
         <span ng-show="player.cDisPercent >= 27">Discipline {{player.disPercent}}%</span>
         <span ng-show="player.cDisPercent <  27 && player.cDisPercent >= 16">Dis {{player.disPercent}}%</span>
         <span ng-show="player.cDisPercent <  16">Dis</span>
       </bar>
-      <bar value="player.cStr" popover="Strength: {{player.str}} ({{player.strPercent}}%)" popover-trigger="mouseenter" type="warning">
+      <bar value="player.cStr" popover="Strength: {{player.str}} ({{player.strPercent}}%)" popover-trigger="mouseenter" class="progress-bar-material-indigo">
         <span ng-show="player.cStrPercent >= 27">Strength {{player.strPercent}}%</span>
         <span ng-show="player.cStrPercent <  27 && player.cStrPercent >= 16">Str {{player.strPercent}}%</span>
         <span ng-show="player.cStrPercent <  16">Str</span>
